[package]
name = "Rust-Redis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.29"
tokio = { version = "1.33.0",features = ["full"]}
bytes = "1.5.0"
once_cell = "1.18.0"
atoi = "2.0.0"
anyhow = "1.0.75"
log = "0.4.20"
env_logger = "0.10.1"